<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add_up">+</string>
    <string name="_0">0</string>
    <string name="textView_result">TextViewResult</string>
    <string name="button_clear">C</string>
    <string name="_hint">0</string>
    <string name="choose_theme">Apply Theme</string>
    <string name="settings">Settings</string>
    <string name="radioButton_lightTheme">Light Theme</string>
    <string name="radioButton_DarkTheme">Dark Theme</string>
    <string name="radioButton_DefaultTheme">Default Theme</string>
</resources>