<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/point"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_8"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_addition"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/add_up"
        style="@style/CustomButtonMaterialSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_equals"
        app:layout_constraintTop_toBottomOf="@+id/button_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_subtraction"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/subtract"
        style="@style/CustomButtonMaterialSecondary"
        app:layout_constraintBottom_toTopOf="@+id/button_addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/CustomButtonMaterial"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_9"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/multiply"
        style="@style/CustomButtonMaterialSecondary"
        app:layout_constraintBottom_toTopOf="@+id/button_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_dividing" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_3"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_dividing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_6"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_2"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_5"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_7"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dividing"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/divide"
        style="@style/CustomButtonMaterialSecondary"
        app:layout_constraintBottom_toTopOf="@+id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_0"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/_4"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:text="@string/equals"
        style="@style/CustomButtonMaterial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_addition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        style="@style/CustomButtonMaterialSecondary"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="@+id/button_equals"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_result"
        style="@style/CustomTextViewMaterial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        style="@style/CustomButtonMaterialSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>